--- a/style.css
+++ b/style.css
@@ -1,26 +1,31 @@
 * {
   box-sizing: border-box;
-  font-family: "Spoqa Han Sans Neo", sans-serif;
+  font-family: 'Spoqa Han Sans Neo', sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  margin: 0; }
+  margin: 0;
+}
 
 html {
-  font-family: "Spoqa Han Sans Neo", sans-serif;
-  font-size: 14px; }
+  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  font-size: 14px;
+}
 
 body {
-  font-family: "Spoqa Han Sans Neo", sans-serif;
+  font-family: 'Spoqa Han Sans Neo', sans-serif;
   font-weight: 400;
-  color: #212529; }
+  color: #212529;
+}
 
 h1 {
-  margin: 0; }
+  margin: 0;
+}
 
 a {
   display: block;
   color: inherit;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 button,
 input,
@@ -28,32 +33,39 @@ select,
 textarea {
   color: #495057;
   border: 1px solid #212529;
-  background-color: transparent; }
-  button:focus,
-  input:focus,
-  select:focus,
-  textarea:focus {
-    box-shadow: none; }
+  background-color: transparent;
+}
+button:focus,
+input:focus,
+select:focus,
+textarea:focus {
+  box-shadow: none;
+}
 
 a,
 button {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 ul,
 ol {
   list-style: none;
-  padding-left: 0px; }
+  padding-left: 0px;
+}
 
 button {
-  padding: 0; }
+  padding: 0;
+}
 
 .hidden {
-  display: none; }
+  display: none !important;
+}
 
 .app {
   display: flex;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
 
 .doc-list-page {
   width: 250px;
@@ -61,103 +73,125 @@ button {
   flex-shrink: 0;
   resize: horizontal;
   overflow: scroll;
-  background-color: #dbe4ff; }
-  .doc-list-page::-webkit-scrollbar {
-    width: 10px;
-    height: 10px; }
-  .doc-list-page::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background-color: #d0bfff; }
-  .doc-list-page::-webkit-resizer {
-    background-color: #b197fc;
-    height: 100%; }
-  .doc-list-page .add-root-button {
-    display: flex;
-    flex-direction: column-reverse;
-    width: 100%;
-    padding: 10px 0;
-    background-color: #eee;
-    border: 1px solid transparent;
-    padding-left: 20px;
-    transition: background-color 400ms; }
-    .doc-list-page .add-root-button:hover {
-      background-color: #e1e1e1; }
+  background-color: #dbe4ff;
+}
+.doc-list-page::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+.doc-list-page::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #d0bfff;
+}
+.doc-list-page::-webkit-resizer {
+  background-color: #b197fc;
+  height: 100%;
+}
+.doc-list-page .add-root-button {
+  display: flex;
+  flex-direction: column-reverse;
+  width: 100%;
+  padding: 10px 0;
+  background-color: #eee;
+  border: 1px solid transparent;
+  padding-left: 20px;
+  transition: background-color 400ms;
+}
+.doc-list-page .add-root-button:hover {
+  background-color: #e1e1e1;
+}
 
 .doc-list-item {
   width: 100%;
-  cursor: pointer; }
-  .doc-list-item.actived > .doc-list-item-wrapper {
-    padding-right: 44px;
-    background-color: #eee;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-weight: 600; }
-    .doc-list-item.actived > .doc-list-item-wrapper button {
-      color: #212529;
-      border: 1px solid #eee;
-      background-color: #d5d5d5; }
-  .doc-list-item .button-wrapper {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 0; }
-    .doc-list-item .button-wrapper button {
-      width: 20px;
-      transition: background-color 200ms;
-      border: 1px solid transparent;
-      border-radius: 5px;
-      color: transparent; }
-      .doc-list-item .button-wrapper button:hover {
-        background-color: #bbbbbb;
-        border: 1px solid #eee;
-        color: #212529; }
-  .doc-list-item-wrapper {
-    position: relative;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    transition: background-color 200ms;
-    padding: 10px 0; }
-    .doc-list-item-wrapper .drop-down-arrow {
-      display: inline-block;
-      width: 9px;
-      height: 12px;
-      margin-right: 5px;
-      background: url(/images/drop-down-arrow.png) no-repeat center/contain;
-      transform: rotate(0deg); }
-    .doc-list-item-wrapper.toggled > .drop-down-arrow {
-      transform: rotate(-90deg); }
-    .doc-list-item-wrapper:hover {
-      padding-right: 44px;
-      background-color: #eee;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis; }
-      .doc-list-item-wrapper:hover button {
-        color: #212529;
-        border: 1px solid #eee;
-        background-color: #d5d5d5; }
+  cursor: pointer;
+}
+.doc-list-item.actived > .doc-list-item-wrapper {
+  padding-right: 44px;
+  background-color: #eee;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight: 600;
+}
+.doc-list-item.actived > .doc-list-item-wrapper button {
+  color: #212529;
+  border: 1px solid #eee;
+  background-color: #d5d5d5;
+}
+.doc-list-item .button-wrapper {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+}
+.doc-list-item .button-wrapper button {
+  width: 20px;
+  transition: background-color 200ms;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  color: transparent;
+}
+.doc-list-item .button-wrapper button:hover {
+  background-color: #bbbbbb;
+  border: 1px solid #eee;
+  color: #212529;
+}
+.doc-list-item-wrapper {
+  position: relative;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: background-color 200ms;
+  padding: 10px 0;
+}
+.doc-list-item-wrapper .dropdown-arrow {
+  display: inline-block;
+  width: 9px;
+  height: 12px;
+  margin-right: 5px;
+  background: url(/images/dropdown-arrow.png) no-repeat center/contain;
+  transform: rotate(0deg);
+}
+.doc-list-item-wrapper.toggled > .dropdown-arrow {
+  transform: rotate(-90deg);
+}
+.doc-list-item-wrapper:hover {
+  padding-right: 44px;
+  background-color: #eee;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.doc-list-item-wrapper:hover button {
+  color: #212529;
+  border: 1px solid #eee;
+  background-color: #d5d5d5;
+}
 
 .doc-edit-page {
   width: 100%;
-  padding: 80px; }
-  .doc-edit-page input {
-    width: 100%;
-    padding: 10px 0;
-    background-color: #fff;
-    border: transparent;
-    font-size: 24px;
-    line-height: 1.5;
-    letter-spacing: -0.01em;
-    font-weight: 500;
-    border-radius: 5px; }
-    .doc-edit-page input:hover {
-      background-color: #eee; }
-  .doc-edit-page div[name='content'] {
-    width: 100%;
-    background-color: #fff;
-    border: transparent;
-    line-height: 2.5; }
+  padding: 80px;
+  flex-shrink: 0;
+}
+.doc-edit-page input {
+  width: 100%;
+  padding: 10px 0;
+  background-color: #fff;
+  border: transparent;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: -0.01em;
+  font-weight: 500;
+  border-radius: 5px;
+}
+.doc-edit-page input:focus {
+  background-color: #eee;
+}
+.doc-edit-page div[name='content'] {
+  width: 100%;
+  background-color: #fff;
+  border: transparent;
+  line-height: 2.5;
+}
 
 /*# sourceMappingURL=style.css.map */
